app/assets/stylesheets/review.scss
$projector-background: white;

@mixin diff-pre-block
{
  white-space: pre;
      display: block;
}

#review-page
{

  margin: { top: 20px; left: 35px; }
  .left-column { width: 295px; }

  @include non-code-font();
     padding: none;
  background: $darker-color;
       color: $lighter-color;

  #review-avatar-image-box,
  #resume-button-box,
  #diff-checkbox-container,
  #fork-button-box,
  #revert-button-box
  {
    display: inline;
    vertical-align: top;
    float: left;
    margin: 0px;
  }

  img.avatar-image
  {
    @include rounded-corner(6px);
     width: 30px;
    height: 30px;
    margin-right: 5px;
  }

  #resume-button
  {
    @include non-code-font();
    @include font-size-medium();
     font-weight: bold;
    margin-right: 4px;
         padding: { top:0px; bottom:2px; left:8px; right:8px; }
      text-align: center;
  }

  #diff-checkbox-container
  {
    @include edged-panel();
    width: 55px;
    margin-right: 5px;
    padding: { top:5px; bottom:2px; right:0px; }
    #diff-checkbox-title
    {
      @include plaintext-font();
       font-size: 12px;
         display: inline;
        position: relative;
          bottom: 3px;
    }
  }

  #fork-button, #revert-button
  {
    @include rounded-corner(4px);
    text-align: left;
    font-size: 10px;
    margin-right: 3px;
    padding: { bottom:1px; top:1px; left:6px; right:6px; }
    position: relative;
    top: 4px;
  }

  #review-traffic-lights
  {
       display: flex;
         float: left;
        margin: 0px;
         width: 750px;
    overflow-x: auto;
    overflow-y: hidden;
    &::-webkit-scrollbar:horizontal { height: 0px; }
    .diff-traffic-light
    {
      padding: 0px;
       margin: 0px;
       cursor: pointer;
      img.with-bar-gap
      {
        width: 22px;
        height: 29px;
        position: relative; // move down slightly to align vertically
        top: 2px;           // with < > navigator triangle buttons
      }
    }
  }

  #review-index-box
  {
    width: 35px;
    #index-number {
         padding: { left: 3px; right: 3px; }
       font-size: 22px;
      text-align: center;
    }
  }
  #prev-index img,
  #next-index img
  {
    @include rounded-corner(4px);
       width: 18px;
      height: 18px;
     padding: 0px;
  }

  .triangle.button
  {
    width: 28px;
    height: 28px;
    padding: 0px;
    border: 1px solid lighten($darker-color,6%);
    &:hover { border: 1px dotted lighten($darker-color,20%); }
    &[disabled] {
      background: lighten($darker-color, 30%);
      &:hover { border: 1px solid lighten($darker-color,6%); }
    }
  }

  #diff-filenames
  {
    display: flex;
    flex-direction: column;
    float: left;
    height: 490px;
    margin: { top: 8px; }
    overflow-x: auto; // make scrollbars invisible
    overflow-y: auto;
    &::-webkit-scrollbar:vertical { width: 0px; }
    &::-webkit-scrollbar:horizontal { height: 0px; }

    font-size: 11pt;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;

    .diff-filename-box
    {
      display: flex;
      flex-direction: row;
    }

    .filename
    {
       height: 16px;
      padding: { left: 4px; top: 0px; bottom: 4px; }
       border: 1px solid $darker-color;
       margin: { bottom: 2px; }

           width: 230px;
       max-width: 230px;

      &[data-filename='stdout'] { margin-top: 20px; }
      &[data-filename='status'] { margin-bottom: 20px; }
    }
  }

  .diff-line-numbers,
  .diff-sheet
  {
    :hover { background: darken($projector-background, 20%); }
    @include code-font();
        height: 572px;
        margin: 0px;
       padding: 0px;
        cursor: default;
    ln { margin: { left : 4px; right: 3px; } font-weight: normal; }

    added, deleted, same { @include diff-pre-block; }
    added { color: darken($diff-added-color, 40%); }
		deleted { color: darken($diff-deleted-color, 30%); }
		same { color: black; }
  }

  .diff-line-numbers
  {
    background: darken($projector-background, 5%);
         width: 40px;
    text-align: right;
      overflow: hidden;
         color: lighten($darker-color, 10%);
        border: none;

    border-top-left-radius: 5px;
    added, deleted { background: darken($projector-background, 12%); }
    added   { &:after { content: '+'; } }
    deleted { &:after { content: '-'; } }
    same    { &:after { content: '='; } }
    same    { color: lighten($darker-color,20%); }
  }

  .diff-sheet
  {
    background: $projector-background;
    added, deleted { background: darken($projector-background, 10%); }
         width: 805px;
    text-align: left;
    overflow-x: auto;
    overflow-y: auto;
    &::-webkit-scrollbar:vertical { width: 7px; }
    // If the horizontal scrollbar has any height you lose
    // the vertical scroll-alignment with the line-numbers.
    // So make the horizontal scrollbar invisible whilst
    // retaining its functionality.
    &::-webkit-scrollbar:horizontal { height: 0px; }
    outline: none;
     border: none;
    added, deleted, same { padding-left: 3px; }
  }

  .diff-deleted-line-count, .diff-added-line-count
  {
    @include rounded-corner(4px);
    @include right-align(0px);
    @include diff-line-count;
     color: $darker-color;
    border: 1px solid lighten($darker-color,6%);
    margin: { right: 2px; }
    &:hover { border: 1px dotted lighten($darker-color,6%); }
    &[disabled]:hover { border: 1px solid lighten($darker-color,6%); }
    cursor: pointer;

    &.none { visibility: hidden; }

    &[disabled]
    {
      background: lighten($darker-color,10%);
      cursor: default;
    }

    &[data-filename='stdout'] { margin: {    top: 20px;  } }
    &[data-filename='status'] { margin: { bottom: 20px;  } }
  }

  .diff-deleted-line-count
  {
    background: $diff-deleted-color;
    &[disabled] { color: lighten($diff-deleted-color,5%); }
  }

  .diff-added-line-count
  {
    background: $diff-added-color;
    &[disabled] { color: lighten($diff-added-color,5%); }
  }

  .diff-added-line-count, .diff-deleted-line-count
  {
    &.on  { &:before { content: ' '; } }
    &.off { &:before { content: '*'; } }
  }
}

.no-title .ui-dialog-titlebar { display: none; }

